I added new projects

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <header>
-    <img id="profile" src="images/scripted_logo_orange.png">
-    <h1>ScriptEd's Portfolio</h1>
+    <img id="profile"
+    <h1>Kiara's Portfolio</h1>
     <ul>
       <li><a class="nav" href="">Home</a></li>
       <li><a class="nav" href="">About</a></li>
@@ -22,9 +22,26 @@
     <p id="like"></p>
   </div>
 <div class="project">
-    <h2 class="project-title"> <a href="">Pun-a-thon</a></h2>
+    <h2 class="project-title"> <a href=" https://popcode.org/?gist=750cead71e7b82e3dd5e292517d0ab8a">Pun-a-thon</a></h2>
     <p>I made a joke page. I used jQuery.</p>
     <button>Like</button>
+    <p id="like"></p>
+  </div>
+<div class="project">
+    <h2 class="project-title"> <a href="https://popcode.org/?gist=88a980bde60c3dce4b4c356316364dbf">What is your name?</a></h2>
+    <p>This is a website that asks your name</p>
+        <button>Like</button>
+    <p id="like"></p>
+  </div>
+<div class="project">
+    <h2 class="project-title"> <a href=" https://popcode.org/?gist=866dba1145aa6875f6ee4b65d85eb233">All About Yanella</a></h2>
+    <p>This is a website was made all about my friend Yanella Lopez</p>
+  </div>
+<div class="project">
+    <h2 class="project-title"> <a href=" https://popcode.org/?gist=1561db2cdec890473efc109f8f221ffb
+">Best things in the world</a></h2>
+    <p>Can you guess what the best thing in the world is?</p>
+        <button>Like</button>
     <p id="like"></p>
   </div>
 </body>
