--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Kiara's Portfolio</h1>
     <ul>
       <li><a class="nav" href="">Home</a></li>
-      <li><a class="nav" href="">About</a></li>
-      <li><a class="nav" href="">Contact</a></li>
+      <li><a class="nav" href="pages/page1.html">About</a></li>
+      <li><a class="nav" href="pages/page2.html">Contact</a></li>
     </ul>
   </header>
   <div class="project">
